--- a/web/src/components/signup.css
+++ b/web/src/components/signup.css
@@ -14,7 +14,7 @@
 }
 
 
-.formbox {
+/* .formbox {
     width: 340px; 
     position: relative;
     margin-top: 30px;
@@ -36,9 +36,9 @@
 .formbox span {
     color: palevioletred;
     font-size: 12px; 
-}
+} */
 
-.btn {margin-top: 30px;}
+/* .btn {margin-top: 30px;}
 .btn button {
     width: 100%; 
     height: 50px;
@@ -47,4 +47,4 @@
     font-size: 20px;
     border-radius: 25px;
     cursor: pointer;
-}
+} */
