--- a/web/src/components/signup.css
+++ b/web/src/components/signup.css
@@ -13,15 +13,9 @@
     margin-bottom: 50px;
 }
 
-
-/* .formbox {
-    width: 340px; 
-    position: relative;
-    margin-top: 30px;
-}
-
-.formbox input {
-    width: 100%;
+#userBirthdateYear {
+    width: 30%;
+    margin-right: 5%;
     padding: 20px 0px 10px;
     background-color: transparent;
     border: none;
@@ -29,22 +23,31 @@
     font-size: 18px; 
 }
 
-.formbox label {
-    color: #999;
+#userBirthdateMonth {
+    width: 30%;
+    padding: 20px 0px 10px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #999;
+    font-size: 18px; 
 }
 
-.formbox span {
-    color: palevioletred;
-    font-size: 12px; 
-} */
+#userBirthdateDay {
+    width: 30%;
+    margin-left: 5%;
+    padding: 20px 0px 10px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #999;
+    font-size: 18px; 
+}
 
-/* .btn {margin-top: 30px;}
-.btn button {
-    width: 100%; 
-    height: 50px;
-    background: #166c;
-    color: ghostwhite;
-    font-size: 20px;
-    border-radius: 25px;
-    cursor: pointer;
-} */
+.birthdate-form {
+    width: 340px; 
+    position: relative;
+    margin-top: 30px;
+}
+
+.birthdate-form label {
+    color: #999;
+}
