--- a/web/src/components/button.css
+++ b/web/src/components/button.css
@@ -4,7 +4,7 @@
     width: 100%; 
     height: 50px;
     background: rgba(79, 110, 110, 0.8);
-    color: ghostwhite;
+    color: white;
     font-size: 20px;
     border-radius: 25px;
     cursor: pointer;
@@ -14,7 +14,7 @@
     width: 100%; 
     height: 50px;
     background: #166c;
-    color: ghostwhite;
+    color: white;
     font-size: 20px;
     border-radius: 25px;
     cursor: pointer;
