--- a/web/src/components/signupsecond.css
+++ b/web/src/components/signupsecond.css
@@ -1,75 +1,75 @@
 .body {
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    height: 150vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 150vh;
 }
 
 .signup-form h1 {
-    font-size: 40px;
-    text-align: center;
-    margin-bottom: 50px;
+  font-size: 40px;
+  text-align: center;
+  /* margin-top: 400px; */
+  margin-bottom: 50px;
 }
 
-
 .userPicture {
-    width: 340px; 
-    position: relative;
-    margin-top: 30px;
+  width: 340px;
+  position: relative;
+  margin-top: 30px;
 }
 
 .userPicture label {
-    color: #999;
+  color: #999;
 }
 
 .userPicture input {
-    width: 100%;
-    padding: 20px 0px 10px;
-    background-color: transparent;
-    border: none;
-    font-size: 18px; 
+  width: 100%;
+  padding: 20px 0px 10px;
+  background-color: transparent;
+  border: none;
+  font-size: 18px;
 }
 
 .skill-form {
-    width: 340px; 
-    position: relative;
-    margin-top: 30px;
+  width: 340px;
+  position: relative;
+  margin-top: 30px;
 }
 
 .skill-form label {
-    color: #999;
+  color: #999;
 }
 
 #userSkill {
-    width: 30%;
-    margin-top: 10px;
-    margin-right: 1.666%;
-    margin-left: 1.666%;
-    padding: 10px 0px 10px;
-    font-size: 15px; 
-    background-color: white;
-    color: #999;
-    border: solid #999;
+  width: 30%;
+  margin-top: 10px;
+  margin-right: 1.666%;
+  margin-left: 1.666%;
+  padding: 10px 0px 10px;
+  font-size: 15px;
+  background-color: white;
+  color: #999;
+  border: solid #999;
 }
 
 .job-form {
-    width: 340px; 
-    position: relative;
-    margin-top: 30px;
+  width: 340px;
+  position: relative;
+  margin-top: 30px;
 }
 
 .job-form label {
-    color: #999;
+  color: #999;
 }
 
 #userJob {
-    width: 30%;
-    margin-top: 10px;
-    margin-right: 1.666%;
-    margin-left: 1.666%;
-    padding: 10px 0px 10px;
-    font-size: 15px; 
-    background-color: white;
-    color: #999;
-    border: solid #999;
-} 
+  width: 30%;
+  margin-top: 10px;
+  margin-right: 1.666%;
+  margin-left: 1.666%;
+  padding: 10px 0px 10px;
+  font-size: 15px;
+  background-color: white;
+  color: #999;
+  border: solid #999;
+}
