--- a/web/src/components/signupsecond.css
+++ b/web/src/components/signupsecond.css
@@ -40,7 +40,7 @@
     color: #999;
 }
 
-#userSkill {
+#userSkills {
     width: 30%;
     margin-top: 10px;
     margin-right: 1.666%;
@@ -73,3 +73,27 @@
     color: #999;
     border: solid #999;
 } 
+
+/* .usable {
+    width: 30%;
+    margin-top: 10px;
+    margin-right: 1.666%;
+    margin-left: 1.666%;
+    padding: 10px 0px 10px;
+    font-size: 15px; 
+    background-color: rgb(109, 159, 133);
+    color: white;
+    border: solid #999;
+}
+
+.unusable {
+    width: 30%;
+    margin-top: 10px;
+    margin-right: 1.666%;
+    margin-left: 1.666%;
+    padding: 10px 0px 10px;
+    font-size: 15px; 
+    background-color: white;
+    color: #999;
+    border: solid #999;
+} */
