--- a/web/src/components/signupsecond.css
+++ b/web/src/components/signupsecond.css
@@ -8,7 +8,7 @@
 .signup-form h1 {
   font-size: 40px;
   text-align: center;
-  /* margin-top: 400px; */
+  margin-top: 400px;
   margin-bottom: 50px;
 }
 
@@ -26,7 +26,7 @@
   width: 100%;
   padding: 20px 0px 10px;
   background-color: transparent;
-  border: none;
+  /* border: none; */
   font-size: 18px;
 }
 
