--- a/web/src/components/mypage/textBox.css
+++ b/web/src/components/mypage/textBox.css
@@ -3,7 +3,7 @@
   margin: 5px;
   border-style: none;
   border-radius: 10px;
-  background: #166c;
+  background: rgb(42, 42, 42);
   color: white;
   width: max-content;
   height: 25px;
